<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_id">5c7229e9</string>
    <string name="app_name">Bonlala</string>
    <string name="string_logout_tips">Whether to cancel the account ?</string>
    <string name="string_logout_txt">Logout</string>
    <string name="string_operate_guide_desc">Func guide</string>
    <string name="string_download_so">downloading</string>
    <string name="string_download_complete">Download completed</string>
    <string name="string_f18_device_per">equipment exercise</string>
    <string name="string_f18_walking">Walking</string>
    <string name="string_f18_Swim">Swim</string>
    <string name="string_f18_tennis">Tennis</string>
    <string name="string_f18_baseball">Baseball</string>
    <string name="string_f18_rugby">Football</string>
    <string name="string_f18_hula_hoop">Hula Hoop</string>
    <string name="string_f18_golf">Golf</string>
    <string name="string_f18_jump">Long jump</string>
    <string name="string_f18_sit_up">Sit-ups</string>
    <string name="string_f18_volley_ball">Volleyball</string>
    <string name="string_dial_center">dial center</string>
    <string name="string_set_dial">set as dial</string>
    <string name="string_cus_dial">custom dial</string>
    <string name="string_cus_txt_style">custom font color</string>
    <string name="string_style_1">style 1</string>
    <string name="string_style_2">style 2</string>
    <string name="string_style_3">style 3</string>
    <string name="string_style_4">style 4</string>
    <string name="string_choose_pick">Select Image</string>
    <string name="string_alert_delete">delete or not?</string>
    <string name="string_upgrad_so_on">upgrade..</string>
    <string name="string_curr_no_file">The current file does not exist!</string>
    <string name="string_no_read_permission">Not authorized to read storage permission!</string>
    <string name="string_open_number">opened %1$s</string>
    <string name="string_drink_alert">Drink water reminder</string>
    <string name="string_dnt_midday">Do Not Disturb at Lunch Break</string>
    <string name="string_period_open">time period open</string>
    <string name="string_open_notication">Turn on notifications</string>
    <string name="string_set_permission">Permission settings</string>
    <string name="string_apps_notice">message notification</string>
    <string name="string_phone_alert">telephone</string>
    <string name="string_sms_alert">Short message</string>
    <string name="string_mail">mail</string>
    <string name="string_calendar">calendar</string>
    <string name="string_other_txt">other</string>
    <string name="string_often_contact">Frequent contacts</string>
    <string name="string_contact_desc">You can add up to 10 frequently used contacts from the phone address book to sync to the device, so that you can quickly initiate calls through the device</string>
    <string name="string_strength_txt">strengthen measurement</string>
    <string name="string_timing_detect">Timing detection</string>
    <string name="string_timing_open">Timed detection on</string>
    <string name="string_timing_desc">The watch will detect health data at continuous intervals</string>
    <string name="string_wrist_desc">During the set time, raise your wrist and point the watch screen towards you to light up the screen</string>
    <string name="string_audio_guid">Audio Mode Guidelines</string>
    <string name="string_no_duty">*The data and suggestions provided are for reference only and cannot be used as a basis for clinical diagnosis and treatment</string>
    <string name="string_permiss_title">Bonlala permissions instructions</string>
    <string name="string_permiss_desc">To ensure the normal use of the APP, please enable the following permissions</string>
    <string name="string_permiss_ble">Use the Bluetooth function</string>
    <string name="string_permiss_ble_desc">Need to use the phone\'s Bluetooth function to connect to the Bluetooth watch</string>
    <string name="string_permiss_gps">Use Location</string>
    <string name="string_permiss_gps_desc">Map running track record and search Bluetooth watch need to turn on the phone GPS switch</string>
    <string name="string_permiss_local">Location permission usage</string>
    <string name="string_permiss_local_desc">Get high-precision position information for running</string>
    <string name="string_permiss_camera">Camera permission use</string>
    <string name="string_permiss_camera_desc">Use the camera to take a picture as an avatar</string>
    <string name="string_permiss_file">File read and write permission usage</string>
    <string name="string_permiss_file_desc">The camera takes a picture and saves, select a picture from the album as the avatar</string>
    <string name="string_permiss_phone">Use of phone permissions</string>
    <string name="string_permiss_phone_desc">Message reminder function, incoming call reminds the watch to check the current incoming call status</string>
    <string name="string_permiss_contact">Use of permissions for contacts and address book</string>
    <string name="string_permiss_contact_desc">When a call comes in, the watch can display the name and phone number</string>
    <string name="string_w560_practise_out_walk">Outdoor Walk</string>
    <string name="string_w560_practise_out_run">Outdoor Run</string>
    <string name="String_w560_practise_cycle">Outdoor Cycle</string>
    <string name="string_w560_practise_indoor_walk">Indoor Walk</string>
    <string name="string_w560_practise_indoor_run">Indoor Run</string>
    <string name="string_w560_practise_yoga">Yoga</string>
    <string name="string_w560_practise_eliptical">Elliptical</string>
    <string name="string_w560_pracitse_spinning">Spinning</string>
    <string name="string_w560_practise_run">Hiking</string>
    <string name="string_w560_practise_rowing">Rowing</string>
    <string name="string_w560_practise_other">Others</string>
    <string name="string_share_rank_txt">The %1$s th person on the entire network completed the challenge \"%2$s\"</string>
    <string name="string_share_share">Share</string>
    <string name="string_challenge_numbers">challenge numbers</string>
    <string name="string_challenge_time">challenge time</string>
    <string name="string_rope_share">Share</string>
    <string name="string_user_privacy">User Agreement and Privacy Policy</string>
    <string name="string_privacy_str">Thank you for using Bonlala! To protect your rights, before using our services, please understand our use of personal information and your related rights through the "Bonlala User Service Agreement" and "Bonlala Privacy Policy"。</string>
    <string name="string_practise_yoga">Yoga</string>
    <string name="string_practise_elliptical">Elliptical</string>
    <string name="string_practise_spinning">Spinning</string>
    <string name="string_practise_hiking">Hiking</string>
    <string name="string_practise_rowing">Rowing</string>
    <string name="string_practise_other">Other</string>
    <string name="string_practise_indoor_walk">Indoor walk</string>
    <string name="app_band_step_number">steps(step)</string>
    <string name="unit_speed">km/h</string>
    <string name="unit_time_per_minute">BPM</string>
    <string name="unit_minute">Minute</string>
    <string name="main_sport_sum">minutes of exercise tody</string>
    <string name="sport_dtail">Sport details</string>
    <string name="please_install_software">Please install the corresponding software</string>
    <string name="speed_remind">Speed remind</string>
    <string name="watch_step_unite_distance">km</string>
    <string name="watch_step_type_distance">Distance</string>
    <string name="watch_step_unite_calory">kcal</string>
    <string name="watch_step_type_calory">Calorie</string>
    <string name="watch_step_target_str">Step target</string>
    <string name="watch_distance_target_str">Distance target</string>
    <string name="watch_calorie_target_str">Calorie target</string>
    <string name="watch_dial_is_set">Display set</string>
    <string name="bracelet_wear">Wearing setting</string>
    <string name="watch_step_target_count">6000 Steps</string>
    <string name="watch_distance_target_count">1000m</string>
    <string name="watch_calorie_target_count">10kcal</string>
    <string name="watch_stable_version_str">Firmware Version</string>
    <string name="watch_unbind_str">Unpair</string>
    <string name="watch_stable_remind_starttime">Start time</string>
    <string name="watch_stable_remind_endtime">End time</string>
    <string name="watch_heart_rate_maxium">Maxium</string>
    <string name="watch_heart_rate_minium">Minium</string>
    <string name="watch_heart_rate_average">Average</string>
    <string name="app_protol">@string/user_agreement</string>
    <string name="app_disconnect_device">The device is not connected</string>
    <string name="app_disconnected">DisConnect</string>
    <string name="app_please_enter_the_verification_code">@string/enter_vertify</string>
    <string name="app_share_goal_dis_unit">km</string>
    <string name="app_share_goal_cal_unit">kcal</string>
    <string name="app_hr">@string/heart_rate</string>
    <string name="app_device_disconnected">DisConnect</string>
    <string name="app_bodymove_temp">Body motion amplitude</string>
    <string name="app_invalid">invalid</string>
    <string name="sleep_util">Minute</string>
    <string name="sleep_util_new">M</string>
    <string name="sleep_util_s">S</string>
    <string name="body_fat_util">kg</string>
    <string name="app_spash_name">Bonlala</string>
    <string name="app_nickname_cheak">@string/enter_nickname</string>
    <string name="app_co">Bonlala Technology (Shenzhen)Co.,Ltd. \nAll Rights Reserved</string>
    <string name="app_weight_util_single">kg</string>
    <string name="app_sleep_util_min">Minute</string>
    <string name="app_scale_unit">kg</string>
    <string name="app_syncing">Reading data</string>
    <string name="app_bluetoothadapter_turnon">ALLOW</string>
    <string name="app_bluetoothadapter_turnoff">DENY</string>
    <string name="app_device_version">V %1$s</string>
    <string name="app_scale_bmi">BMI:%1$s</string>
    <string name="press_again_exit">Click twice to exit the APP</string>
    <string name="app_rate_up">↑%1$s</string>
    <string name="app_rate_down">↓%1$s</string>
    <string name="app_bmp_recode">HeartRate record</string>
    <string name="app_time_util">%1$sH%2$sM</string>
    <string name="app_sleep_setting_remind">%1$d minute early</string>
    <string name="app_scale_sum">： </string>
    <string name="app_close">close</string>
    <string name="app_band_achieve_goal">Achieved goal%1$s%%</string>
    <string name="app_sleep_time_hour_min">%1$sH%2$sM</string>
    <string name="app_sleep_time_min">%1$sM</string>
    <string name="cont_20kg">If the weight is less than 20kg, the data will not be recorded</string>
    <string name="app_version">v%1$s</string>
    <string name="app_sleep_time_remind_title">Sleep to remind</string>
    <string name="app_sleep_time_remind_tips">Sleep time</string>
    <string name="app_not_history_data">No historical data</string>
    <string name="confirm">Confirm</string>
    <string name="all">All</string>
    <string name="run">Running</string>
    <string name="walk">Walking</string>
    <string name="ride">Cycling</string>
    <string name="badminton">Badminton</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="climbing">Climbing</string>
    <string name="pingpang">Table tennis</string>
    <string name="privacy_agreement_refuse">Disagree</string>
    <string name="privacy_agreement_ok">Agree</string>
    <string name="user_agreement_tips">《Service Agreement》</string>
    <string name="privacy_agreement_tips">《Privacy Policy》</string>
</resources>