<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_practise_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/dp15"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/iv_select_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/icon_practise_recode" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:background="@drawable/shape_btn_white_20_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:paddingBottom="@dimen/dp30">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/all"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_walk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_out_walk"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_out_run"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ride"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/String_w560_practise_cycle"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />


            <TextView
                android:id="@+id/tv_badminton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_indoor_walk"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_basketball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_indoor_run"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_football"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="HIIT"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_climbing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_yoga"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_pingpang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_eliptical"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_spinning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_pracitse_spinning"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_hiking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_run"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_rowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_rowing"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:text="@string/string_w560_practise_other"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/shape_text_light_green_bg"
                android:gravity="center"
                android:textColor="@color/common_tips_color"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/tempview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>