<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dp_10"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/shap_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialDialogCancelTv"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#4DDA64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_agreement_refuse"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>


            <TextView
                android:id="@+id/dialDialogSureTv"
                android:layout_margin="5dp"
                android:layout_gravity="right"
                android:textSize="18sp"
                android:textColor="#4DDA64"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>

        </LinearLayout>


        <brandapp.isport.com.basicres.commonview.RoundImageView
            android:id="@+id/dialPreviewImgView"
            android:layout_gravity="center"
            android:layout_width="110dp"
            android:layout_margin="20dp"
            android:layout_height="110dp"
            android:src="@drawable/icon_facebook_img"/>



        <TextView
            android:id="@+id/dialViewBtnTv"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_layout_green_bg_19"
            android:gravity="center"
            android:paddingLeft="@dimen/dp15"
            android:paddingTop="@dimen/dp6"
            android:paddingRight="@dimen/dp15"
            android:paddingBottom="@dimen/dp6"
            android:tag="start"
            android:text="@string/string_set_dial"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>